--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -22,6 +22,6 @@
   border-radius: 0 !important;
 
   object-fit: contain !important;
-  object-position: center center !important;
+  object-position: center bottom !important;
   background-color: transparent;
 }
